<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".HomeActivity">

    <Button
        android:id="@+id/online_btn"
        android:layout_width="175dp"
        android:layout_height="51dp"
        android:background="@drawable/buttonback"
        android:fontFamily="sans-serif-black"
        android:padding="5dp"
        android:text="@string/online_mode"
        android:textColor="@android:color/primary_text_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.602" />
    <Button
        android:id="@+id/rate_us_btn"
        android:layout_width="175dp"
        android:layout_height="51dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/buttonback"
        android:elevation="10dp"
        android:focusable="true"
        android:fontFamily="sans-serif-black"
        android:padding="5dp"
        android:text="@string/rate_us"
        android:textColor="@android:color/primary_text_light"
        app:layout_constraintEnd_toEndOf="@+id/online_btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/online_btn"
        app:layout_constraintTop_toBottomOf="@+id/online_btn" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="327dp"
        android:layout_height="6dp"
        android:background="@drawable/buttonback"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.953" />
    <Button
        android:id="@+id/multi"
        android:layout_width="175dp"
        android:layout_height="51dp"
        android:background="@drawable/buttonback"
        android:fontFamily="sans-serif-black"
        android:padding="10dp"
        android:text="@string/multi_player_mode"
        android:textColor="@android:color/primary_text_light_nodisable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.185" />

    <Button
        android:id="@+id/vsAndroid"
        android:layout_width="175dp"
        android:layout_height="51dp"
        android:background="@drawable/buttonback"
        android:fontFamily="sans-serif-black"
        android:padding="10dp"
        android:text="@string/vs_android_mode"
        android:textColor="@android:color/primary_text_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.389" />



    <TextView
        android:id="@+id/textView2"
        android:layout_width="327dp"
        android:layout_height="6dp"
        android:background="@drawable/buttonback"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035" />


</androidx.constraintlayout.widget.ConstraintLayout>